<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/big_coffee"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_content"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/welcome_main_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_main_content"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:fontFamily="@font/sora_medium"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome_help_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/welcome_help_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_help_content"
            app:layout_constraintBottom_toTopOf="@id/get_starting_btn"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textAlignment="center"
            android:fontFamily="@font/sora" />

        <Button
            android:id="@+id/get_starting_btn"
            style="@style/Theme.CoffeeShop.Button"
            android:text="@string/get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>

